continue work on README.md for task3, also some minor changes